--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="primary">#F44336</color>
     <color name="primaryDark">#C62828</color>
+    <color name="window_background">#FFF5F5F5</color>
 </resources>
