--- a/app/src/main/res/layout/floating_action_button.xml
+++ b/app/src/main/res/layout/floating_action_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/relative_layout"
@@ -9,10 +9,9 @@
         android:id="@+id/fab1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
         app:fabSize="normal"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:src="@drawable/ic_backup_white_48dp"
-        android:layout_margin="16dp"
-        android:elevation="8dp"/>
-</RelativeLayout>
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="72dp"/>
+</FrameLayout>
